<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background"
        android:isScrollContainer="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".view.MainActivity">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/ten_sp"
                android:layout_marginRight="@dimen/ten_sp"
                android:layout_marginTop="@dimen/forty_sp"
                android:background="@color/colorPrimary"
                android:onClick="@{(v) -> AddFamilyViewModel.onClick(v)}"
                android:padding="@dimen/ten_sp"
                android:text="@string/add_member"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/emailID_TIL" />

            <RadioGroup
                android:id="@+id/radio_group_RG"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/ten_sp"
                android:background="@drawable/rounded_border"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/last_name_TIL">

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/male_RBT"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/ten_sp"
                    android:checked="true"
                    android:onClick="@{(v) -> AddFamilyViewModel.onMaleButtonClicked()}"
                    android:text="@string/male" />

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/female_RBT"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/ten_sp"
                    android:onClick="@{(v) -> AddFamilyViewModel.onFemaleButtonClicked()}"
                    android:text="@string/female" />
            </RadioGroup>

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/relation_SP"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/ten_sp"
                android:background="@drawable/rounded_border"
                android:entries="@array/Relation"
                android:onItemSelected="@{(parent,view,pos,id)->AddFamilyViewModel.onSelectItem(parent,view,pos,id)}"
                android:padding="@dimen/fifteen_sp"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/radio_group_RG" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/last_name_TIL"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/ten_sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/first_name_TIL">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/last_name_TV"
                    style="@style/EditTextHint"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@null"
                    android:digits="abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ"
                    android:hint="@string/last_name"
                    android:inputType="textPersonName"
                    android:text="@={AddFamilyViewModel.lastName}"
                    android:textColor="@color/white"
                    tools:ignore="Autofill,UnusedAttribute" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/phone_number_TIL"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/ten_sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/relation_SP">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/phone_number_TV"
                    style="@style/EditTextHint"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@null"
                    android:digits="0123456789"
                    android:hint="@string/phone_number"
                    android:inputType="phone"
                    android:maxLength="10"
                    android:text="@={AddFamilyViewModel.phoneNumber}"
                    android:textColor="@color/white"
                    tools:ignore="Autofill,UnusedAttribute" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailID_TIL"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/ten_sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/phone_number_TIL">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/emailID_TV"
                    style="@style/EditTextHint"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@null"
                    android:digits="abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ@._"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:text="@={AddFamilyViewModel.emailID}"
                    android:textColor="@color/white"
                    tools:ignore="Autofill,UnusedAttribute" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/first_name_TIL"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/ten_sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/first_name_TV"
                    style="@style/EditTextHint"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@null"
                    android:digits="abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ"
                    android:hint="@string/first_name"
                    android:inputType="textPersonName"
                    android:text="@={AddFamilyViewModel.firstName}"
                    android:textColor="@color/white"
                    tools:ignore="Autofill,UnusedAttribute" />

            </com.google.android.material.textfield.TextInputLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <data>

        <variable
            name="AddFamilyViewModel"
            type="com.learnplanbuilder.app.viewmodel.AddFamilyViewModel" />
    </data>

</layout>